refactor (PR 코멘트 7, 8, 9, 10번 대응 수정)
PR 코멘트 7번에 대응 수정
- 테스트 코드 내 중복 제거
- RacingGame의 findWinner 메서드 테스트 코드 추가
- 변수명에 자료형이 들어가지 않도록 수정
- RacingGame 내 메서드 순서 변경